Enhance documentation and improve Checkov configuration
- Added XML documentation comments to IMovieService and Movie classes for better clarity.
- Updated Checkov configuration to include an exclamation mark for emphasis in the skip-check comment.

--- a/.github/linters/.checkov.yaml
+++ b/.github/linters/.checkov.yaml
@@ -1,7 +1,7 @@
 ---
 quiet: true
 skip-check:
-  - CKV_AZURE* # Azure checks are skipped as we rely on Azure Policy instead
+  - CKV_AZURE* # Azure checks are skipped as we rely on Azure Policy instead!
 skip-path:
   - bin
   - obj
