--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -73,9 +73,9 @@ jobs:
         if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
         run: |
           az acr login --name ${{ vars.CONTAINER_REGISTRY }}
-          IMAGE="${{ vars.CONTAINER_REGISTRY }}.azurecr.io/ondfisk-githubdemo"
-          docker tag "ondfisk-githubdemo:${{ github.sha }}" "$IMAGE:${{ github.sha }}"
-          docker tag "ondfisk-githubdemo:${{ github.sha }}" "$IMAGE:${{ env.IMAGE_TAG }}"
+          IMAGE="${{ vars.CONTAINER_REGISTRY }}.azurecr.io/githubdemo"
+          docker tag "githubdemo:${{ github.sha }}" "$IMAGE:${{ github.sha }}"
+          docker tag "githubdemo:${{ github.sha }}" "$IMAGE:${{ env.IMAGE_TAG }}"
           docker push $IMAGE --all-tags
         env:
           IMAGE_TAG: ${{ github.ref == 'refs/heads/main' && 'latest' || 'test' }}
