Update Azure Container Registry image name in CI workflow

--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -139,7 +139,7 @@ jobs:
         with:
           app-name: ${{ vars.WEBAPP }}
           slot-name: ${{ vars.DEPLOYMENT_SLOT }}
-          images: ${{ vars.CONTAINER_REGISTRY }}.azurecr.io/ondfisk-githubdemo:${{ env.IMAGE_TAG }}
+          images: ${{ vars.CONTAINER_REGISTRY }}.azurecr.io/githubdemo:${{ env.IMAGE_TAG }}
         env:
           IMAGE_TAG: ${{ github.ref == 'refs/heads/main' && 'latest' || 'test' }}
 
