Refactor project to update resource names and connection strings for consistency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,8 +46,7 @@
     "noninteractive",
     "nvarchar",
     "odbc",
-    "ondfisk",
-    "ondfiskcontainerregistry",
+    "acrghdemo",
     "outfile",
     "Passw",
     "passwordless",
