--- a/src/MovieApi/MovieApi.csproj
+++ b/src/MovieApi/MovieApi.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <EnableSdkContainerSupport>true</EnableSdkContainerSupport>
-    <ContainerRepository>ondfisk-githubdemo</ContainerRepository>
+    <ContainerRepository>githubdemo</ContainerRepository>
     <ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:9.0-azurelinux3.0-amd64</ContainerBaseImage>
     <UserSecretsId>daa757f0-b8d5-4679-8e0a-c60b6cb633eb</UserSecretsId>
   </PropertyGroup>
